Prevent doubling up of ad spacing.

--- a/assets/styles/partials/_main.scss
+++ b/assets/styles/partials/_main.scss
@@ -542,7 +542,8 @@
 
 
 	#MainMartini {
-		margin-bottom: var(--typography--line--2);
 		margin-top:    var(--typography--line--2);
+
+		&:not(:last-child) { margin-bottom: var(--typography--line--2) }
 	}
 }
